<resources>
    <string name="app_name">The Movie DB</string>

    <string name="genre_text">Genre</string>
    <string name="top_rated_text">Top Rated</string>
    <string name="popular_text">Popular</string>
    <string name="up_coming_text">Upcoming</string>
    <string name="now_playing_text">Now Playing</string>
    <string name="exit_text">Press again to exit</string>
    <string name="back_text">Back</string>
    <string name="overview_text">Overview</string>
    <string name="english_text">English</string>
    <string name="status_text">Status</string>
    <string name="language_text">Original Language</string>
    <string name="budget_text">Budget</string>
    <string name="revenue_text">Revenue</string>
    <string name="top_cast_text">Top Billed Cast</string>
    <string name="reviews_text">Reviews</string>
    <string name="amount_text">$%s</string>
    <string name="no_network_text">No Internet Connection</string>


</resources>
