<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="moviesDTO"
            type="com.themovie.db.app.model.MoviesDTO" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_root_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:elevation="1dp"
                android:gravity="center"
                android:text="@string/back_text"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_banner"
                android:layout_width="0dp"
                android:layout_height="350dp"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                imageUrl="@{moviesDTO.backdrop_path}"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_movie_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@{moviesDTO.title}"
                app:layout_constraintBottom_toTopOf="@id/tv_genre"
                app:layout_constraintEnd_toStartOf="@id/cv_progress_view"
                app:layout_constraintStart_toStartOf="@id/tv_back"
                tools:text="The Suicide Squad" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white"
                android:text="@{moviesDTO.getMovieGenres()}"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/iv_banner"
                app:layout_constraintEnd_toStartOf="@id/cv_progress_view"
                app:layout_constraintStart_toStartOf="@id/tv_back"
                tools:text="Action, Adventure, Fantasy, Comedy" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_progress_view"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="16dp"
                android:theme="@style/Theme.MaterialComponents.Light"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:cardCornerRadius="30dp"
                app:layout_constraintBottom_toBottomOf="@id/iv_banner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_banner">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_progress_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ProgressBar
                        android:id="@+id/pb_vote"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/progress_bg"
                        android:indeterminate="false"
                        android:max="100"
                        android:progress="@{moviesDTO.getVotes(moviesDTO.vote_average)}"
                        android:progressDrawable="@drawable/circular_progress_style" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_votes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{moviesDTO.getVotes(moviesDTO.vote_average) + `%`}"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="@id/pb_vote"
                        app:layout_constraintEnd_toEndOf="@id/pb_vote"
                        app:layout_constraintStart_toStartOf="@id/pb_vote"
                        app:layout_constraintTop_toTopOf="@id/pb_vote" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_overview_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/overview_text"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tv_back"
                app:layout_constraintTop_toBottomOf="@id/cv_progress_view" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@{moviesDTO.overview}"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/cv_progress_view"
                app:layout_constraintStart_toStartOf="@id/tv_back"
                app:layout_constraintTop_toBottomOf="@id/tv_overview_label" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_status_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/status_text"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/tv_language_label"
                app:layout_constraintStart_toStartOf="@id/tv_back"
                app:layout_constraintTop_toBottomOf="@id/tv_overview" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_language_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/language_text"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/cv_progress_view"
                app:layout_constraintStart_toEndOf="@id/tv_status_label"
                app:layout_constraintTop_toBottomOf="@id/tv_overview" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@{moviesDTO.status}"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/tv_status_label"
                app:layout_constraintStart_toStartOf="@id/tv_status_label"
                app:layout_constraintTop_toBottomOf="@id/tv_status_label" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_language"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/english_text"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/tv_language_label"
                app:layout_constraintStart_toStartOf="@id/tv_language_label"
                app:layout_constraintTop_toBottomOf="@id/tv_language_label" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_budget_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/budget_text"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/tv_language_label"
                app:layout_constraintStart_toStartOf="@id/tv_back"
                app:layout_constraintTop_toBottomOf="@id/tv_language" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_budget"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@{String.format(@string/amount_text, moviesDTO.getValues(moviesDTO.budget))}"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/tv_budget_label"
                app:layout_constraintStart_toStartOf="@id/tv_budget_label"
                app:layout_constraintTop_toBottomOf="@id/tv_budget_label" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_revenue_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/revenue_text"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/cv_progress_view"
                app:layout_constraintStart_toEndOf="@id/tv_budget_label"
                app:layout_constraintTop_toBottomOf="@id/tv_language" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_revenue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@{String.format(@string/amount_text, moviesDTO.getValues(moviesDTO.revenue))}"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/tv_revenue_label"
                app:layout_constraintStart_toStartOf="@id/tv_revenue_label"
                app:layout_constraintTop_toBottomOf="@id/tv_revenue_label" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_cast_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/top_cast_text"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tv_back"
                app:layout_constraintTop_toBottomOf="@id/tv_revenue" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_cast"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_cast_label" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_review_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/reviews_text"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tv_back"
                app:layout_constraintTop_toBottomOf="@id/rcv_cast" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_reviews"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_review_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>